--- a/hw1/index.html
+++ b/hw1/index.html
@@ -7,11 +7,11 @@
     <title>js-hw1</title>
 </head>
 <body>
-    <script src="js/hw1-task1.js" type="module"></script>
+    <!-- <script src="js/hw1-task1.js" type="module"></script> -->
     <script src="js/hw1-task2.js" type="module"></script>
-    <script src="js/hw1-task3.js" type="module"></script>
+    <!-- <script src="js/hw1-task3.js" type="module"></script>
     <script src="js/hw1-task4.js" type="module"></script>
     <script src="js/hw1-task5.js" type="module"></script>
-    <script src="js/hw1-task6.js" type="module"></script>
+    <script src="js/hw1-task6.js" type="module"></script> -->
 </body>
 </html>
