--- a/hw2/index.html
+++ b/hw2/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     
-    <!-- <script src="js/hw2-task1.js" type="module"></script> -->
-    <!-- <script src="js/hw2-task2.js" type="module"></script> -->
-    <!-- <script src="js/hw2-task3.js" type="module"></script> -->
-    <!-- <script src="js/hw2-task4.js" type="module"></script> -->
-    <!-- <script src="js/hw2-task5.js" type="module"></script> -->
-    <!-- <script src="js/hw2-task6.js" type="module"></script> -->
+    <script src="js/hw2-task1.js" type="module"></script>
+    <script src="js/hw2-task2.js" type="module"></script>
+    <script src="js/hw2-task3.js" type="module"></script>
+    <script src="js/hw2-task4.js" type="module"></script>
+    <script src="js/hw2-task5.js" type="module"></script>
+    <script src="js/hw2-task6.js" type="module"></script>
     <script src="js/hw2-task7.js" type="module"></script>
 
 
